Move biome modification into the MinecraftServer constructor (#1966)
* Move biome modification into the MinecraftServer constructor to have access to the actual level generation settings for the level.

* Move biome modification into the MinecraftServer constructor to have access to the actual level generation settings for the level.

* Move biome modification into the MinecraftServer constructor to have access to the actual level generation settings for the level.

* Ensure the feature ordering in BiomeSource is updated after modifying biomes.

* Don't use var

* Use the opportunity to check the real chunk generators for
the specified structure.